--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,12 +4,30 @@
 		<tr>
 			<th>Title</th>
 		    <th>Body</th>
-		    <th colspan="3"></th>
+		    <th></th>
 		</tr>
 	</thead>
 	<tbody>
-		<%= @books each do |book| %>
+		<% @books.each do |book| %>
 		<tr>
-			<tb><%= book.title %></tb>
-			<tb><%= book.body %></tb>
-			
+			<td><%= book.title %></td>
+			<td><%= book.body %></td>
+			<td><%= link_to "show", book_path(book.id) %></td>
+			<td><%= link_to "edit", edit_book_path(book.id) %></td>
+			<td><%= link_to "destroy", book_path(book.id), method: :delete %></td>
+		</tr>
+		<% end %>
+	</tbody>
+</table>
+
+<%= render partial: 'books/error', locals:{book:@book} %>
+<h1>New book</h1>
+<%= form_for(@book) do |f| %>
+<div>
+	<h2>title</h2>
+	<%= f.text_field :title %>
+	<h2>body</h2>
+	<%= f.text_area :body %>
+	<%= f.submit "Create Book" %>
+</div>
+<% end %>
