--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Bookers</h1>
-<table>
+<table class="table">
 	<thead>
 		<tr>
 			<th>Title</th>
 		    <th>Body</th>
-		    <th></th>
+		    <th colspan="3"></th>
 		</tr>
 	</thead>
 	<tbody>
